# krakyn

./: .gitignore  CMakeLists.txt  README.md
client/: launcher.cc
krakyn/: authentication.cc  endpoints.cc  krakyn.cc  krakyn.hh  unix_socket.cc
server/: server.cc
